--- a/src/main/webapp/jQuery4.html
+++ b/src/main/webapp/jQuery4.html
@@ -19,13 +19,13 @@
 	<br>
 
 	<div id="div1"
-		style="width: 80px; height: 80px; background-color: red;"></div>
+		>id="div1</div>
 	<br>
 	<div id="div2"
-		style="width: 80px; height: 80px; background-color: green;"></div>
+		>id="div2</div>
 	<br>
 	<div id="div3"
-		style="width: 80px; height: 80px; background-color: blue;"></div>
+	 >id="div3</div>
 
 
 
