--- a/src/main/webapp/jQuery5.html
+++ b/src/main/webapp/jQuery5.html
@@ -25,7 +25,7 @@
 <body>
 
 
-	<div id="flip">Click to slide the panel down or up</div>
+	<div id="flip">Click</div>
 	<div id="panel">Hello world!</div>
 
 
