--- a/src/main/webapp/jQuery4.html
+++ b/src/main/webapp/jQuery4.html
@@ -12,20 +12,17 @@
 <body>
 
 
-	<p>Demonstrate fadeToggle() with different speed parameters.</p>
+	
 
-	<button>Click to fade in/out boxes</button>
+	<button>Click</button>
 	<br>
 	<br>
 
-	<div id="div1"
-		>id="div1</div>
+	<div id="div1">id="div1</div>
 	<br>
-	<div id="div2"
-		>id="div2</div>
+	<div id="div2">id="div2</div>
 	<br>
-	<div id="div3"
-	 >id="div3</div>
+	<div id="div3">id="div3</div>
 
 
 
@@ -33,10 +30,15 @@
 	<script type="text/javascript">
 		$(document).ready(function() {
 			$("button").click(function() {
-				$("#div1").fadeToggle();
+				/* $("#div1").fadeToggle();
 				$("#div2").fadeToggle("slow");
-				$("#div3").fadeToggle(3000);
+				$("#div3").fadeToggle(3000); */
+
+				$("#div1").fadeTo("slow", 0.15);
+				$("#div2").fadeTo("slow", 0.4);
+				$("#div3").fadeTo("slow", 0.7);
 			});
+
 		});
 	</script>
 </body>
