--- a/src/main/webapp/jQuery9.html
+++ b/src/main/webapp/jQuery9.html
@@ -5,8 +5,7 @@
 <title>Insert title here</title>
 <!-- 스크립트 -->
 <!-- <script src="jquery-3.6.0.min.js"></script> -->
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script	src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
 	<input type="text" name="" id="txt" class="">
