--- a/src/main/webapp/datatables.html
+++ b/src/main/webapp/datatables.html
@@ -11,29 +11,55 @@
 <table id="myTable" class="table table-hover">
 	<thead>
 		<tr><th>#</th><th>First Name</th><th>Last Name</th><th>Username</th></tr>
-	</thead>	
-	<tr><td>1</td><td>Mark</td><td>Otto</td><td>@mdo</td></tr>
-	<tr><td>2</td><td>Jacob</td><td>Thornton</td><td>@fat</td></tr>
-	<tr><td>3</td><td>Larry</td><td>the Bird</td><td>@twitter</td></tr>
-	<tr><td>1</td><td>Mark</td><td>Otto</td><td>@mdo</td></tr>
-	<tr><td>2</td><td>Jacob</td><td>Thornton</td><td>@fat</td></tr>
-	<tr><td>3</td><td>Larry</td><td>the Bird</td><td>@twitter</td></tr>
-	<tr><td>1</td><td>Mark</td><td>Otto</td><td>@mdo</td></tr>
-	<tr><td>2</td><td>Jacob</td><td>Thornton</td><td>@fat</td></tr>
-	<tr><td>3</td><td>Larry</td><td>the Bird</td><td>@twitter</td></tr>
-	<tr><td>1</td><td>Mark</td><td>Otto</td><td>@mdo</td></tr>
-	<tr><td>2</td><td>Jacob</td><td>Thornton</td><td>@fat</td></tr>
-	<tr><td>3</td><td>Larry</td><td>the Bird</td><td>@twitter</td></tr>
-	<tr><td>1</td><td>Mark</td><td>Otto</td><td>@mdo</td></tr>
-	<tr><td>2</td><td>Jacob</td><td>Thornton</td><td>@fat</td></tr>
-	<tr><td>3</td><td>Larry</td><td>the Bird</td><td>@twitter</td></tr>
+	</thead>
+	<tbody>	
+		<tr><td>1</td><td>Mark</td><td>Otto</td><td>@mdo</td></tr>
+		<tr><td>2</td><td>Jacob</td><td>Thornton</td><td>@fat</td></tr>
+		<tr><td>3</td><td>Larry</td><td>the Bird</td><td>@twitter</td></tr>
+		<tr><td>1</td><td>Mark</td><td>Otto</td><td>@mdo</td></tr>
+		<tr><td>2</td><td>Jacob</td><td>Thornton</td><td>@fat</td></tr>
+		<tr><td>3</td><td>Larry</td><td>the Bird</td><td>@twitter</td></tr>
+		<tr><td>1</td><td>Mark</td><td>Otto</td><td>@mdo</td></tr>
+		<tr><td>2</td><td>Jacob</td><td>Thornton</td><td>@fat</td></tr>
+		<tr><td>3</td><td>Larry</td><td>the Bird</td><td>@twitter</td></tr>
+		<tr><td>1</td><td>Mark</td><td>Otto</td><td>@mdo</td></tr>
+		<tr><td>2</td><td>Jacob</td><td>Thornton</td><td>@fat</td></tr>
+		<tr><td>3</td><td>Larry</td><td>the Bird</td><td>@twitter</td></tr>
+		<tr><td>1</td><td>Mark</td><td>Otto</td><td>@mdo</td></tr>
+		<tr><td>2</td><td>Jacob</td><td>Thornton</td><td>@fat</td></tr>
+		<tr><td>3</td><td>Larry</td><td>the Bird</td><td>@twitter</td></tr>
+	</tbody>
 </table>
 
 <script>
 $(document).ready( function () {
     $('#myTable').DataTable({
     	paging: true,
-    	scrollY: 400
+    	scrollY: 400,
+    	searching: false,
+    	ordering:  false,
+    	select: true,
+    	buttons: [
+            {
+              extend: "excel",
+              text: "엑셀 다운로드",
+              filename: function () {
+                if ($("#file1").val() === "a1") {
+                  return "_"+$("#file1").val();
+                } else {
+                  return "file2";
+                }
+              },
+
+              customize: function (xlsx) {
+              //엑셀 셀 커스텀
+                var sheet = xlsx.xl.worksheets["sheet1.xml"];
+                $("c[r=B2] t", sheet).text("custom text1");
+                $("c[r=C2] t", sheet).text("custom text2");
+ 
+              },
+            },
+          ]
     });
 } );
 </script>
